Fix layout issues
see #189

--- a/apps/roundcube/css/base.css
+++ b/apps/roundcube/css/base.css
@@ -18,3 +18,18 @@
 	margin-top: -7px; /* Half the height */
 	margin-left: -64px; /* Half the width */
 }
+
+.mail-controls {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	position: fixed;
+	right: 0;
+	left: 0;
+	height: 26px;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	background: #eee;
+	border-bottom: 1px solid #e7e7e7;
+}
